--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  font-family: Lato Arial, Helvetica, sans-serif;
+}
+
+.deleteBtn {
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.productContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.producto-card {
+  padding: 1em;
+  text-align: left;
+}
+
+.producto-card:hover {
+  cursor: pointer;
+  background-color: #f5f5f5;
+}
+
+.carrito {
+  font-size: 1.2em;
+}
